compositor: turn off the idle timer when sleeping

Also updates the drm, fbdev and rpi backend to use
weston_compositor_set_sleeping() and not set the state manually.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=61910 (rpi backend
untested).

v2: don't set DPMS state when switching VT.
v3: move unrelated enum change into its own commit.